--- a/res/styles.css
+++ b/res/styles.css
@@ -3,10 +3,17 @@ body, html {
     margin: 0;
 }
 
+@font-face {
+    font-family: myFont;
+    src: url(Yang.otf);
+}
+
 .bg {
     background-image: url("bg.jpg");
 
     height: 100%; 
+	top: 0;
+	left: 0;
 	/* position: fixed; */
 	/* z-index: 1; */
 
@@ -53,5 +60,47 @@ body, html {
 	height: 100%;
 }
 
+.verse-container {
+	position: fixed;
+	z-index: 4;
+	width: 50vw;
+	height: 60vw;
+	top: -10%;
+	left: 24%;
+	opacity: 0.75;
+}
+
+.verse-container img {
+	width: 100%;
+	height: 100%;
+}
+
+.centered {
+	font-family: myFont;
+	font-size: 3vw;
+	text-align: center;
+	width: 100%;
+	color: #afafaf;
+    position: absolute;
+	z-index: 5;
+    top: 50%;
+    left: 50%;
+}
+
+.verse0, .verse1, .verse2, .verse3, .verse4, .verse5, .verse6, .verse7, .verse8, .verse9, .verse10, .verse11, .verse12, .verse13, .verse14, .verse15, .verse16, .verse17, .verse18, .verse19 {
+	transition-property: opacity;
+    transition-duration: 2s;
+	transition-timing-function: ease-in-out;
+	position: absolute;
+    transform: translate(-50%, -50%);
+}
+
+.verse0 {
+	opacity: 1.0;
+}
+
+.verse1, .verse2, .verse3, .verse4, .verse5, .verse6, .verse7, .verse8, .verse9, .verse10, .verse11, .verse12, .verse13, .verse14, .verse15, .verse16, .verse17, .verse18, .verse19 {
+	opacity: 0.0;
+}
 
 
